--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Flashcard based on terminologies in http://www.zenspider.com/Languages/Ruby/QuickRef.html
+Flashcard and quizzer based on terminologies in http://www.zenspider.com/Languages/Ruby/QuickRef.html
